<resources>
    <string name="app_name">Covid Stats</string>
    <string name="url">https://api.apify.com/v2/key-value-stores/toDWvRj1JpTXiM8FF/records/LATEST?disableRedirect=true</string>
    <string name="txtTitle">Covid Stats in India</string>
    <string name="txtDailyChange">Daily Change</string>
    <string name="txtLast_updated">Last updated on:</string>
    <string name="txtStateDistribution">Statewise Distribution</string>
    <string name="txtState">Total</string>
    <string name="txtActive">Active</string>
    <string name="txtRecovered">Recovered</string>
    <string name="txtNActive">Active Cases</string>
    <string name="txtNRecovered">Recovered</string>
    <string name="txtNDeaths">Deceased</string>
    <string name="nxtActivity">View Last 24hr Updates Statewise ➡</string>
    <string name="txtNextActCard">Tap here for last 24hrs update</string>
    <string name="txtFaq">FAQ</string>
    <string name="dataUnavailable">Unable to fetch data!</string>
    <string name="txtHelpline">Call Helpline</string>
    <string name="txtWebsite">Visit Official Website</string>
    <string name="txtTotalCases">Total Cases</string>
    <string name="txtDeaths">Deceased</string>
    <string name="txtDeveloper">Developer</string>
    <string name="txtContributor">Contributor</string>
    <string name="contributorName">CA. Parvinder Kaur Matharu</string>
    <string name="versionCheckObjId">1mvd6mtrn0</string>
    <string name="txtDialogSubtitle">Do you want to download the latest version now?</string>
    <string name="txtDialogPositive">Yes</string>
    <string name="txtDialogNegative">Not Now!</string>
    <string name="txtDialogTitle">App Update Available</string>
    <string name="txtDialogToast">Update your app for better experience!</string>
    <string name="txtAppClosure">Closing app in few seconds...</string>
    <string name="txtFindMeOn">Find me on</string>
    <string name="txtVersion">Version: </string>
    <string name="txtRefresh">Refresh</string>
    <string name="no_internet_warning"><b>Aw Snap!&#x2639;</b>\nPlease Check your Internet Connection\nor\nTry Again after sometime</string>
    <string name="footer">Made in INDIA, Made for INDIA&#10084;&#65039;</string>
    <string name="faqLink">https://www.who.int/emergencies/diseases/novel-coronavirus-2019/question-and-answers-hub/q-a-detail/q-a-coronaviruses</string>
    <string name="webLink">https://www.mohfw.gov.in/</string>
    <string name="helpline">tel:1075</string>
    <string name="developerName">Kanwaljeet Singh Matharu</string>
    <string name="gitLink">https://github.com/kanwaljeetsm</string>
    <string name="linkedinLink">https://www.linkedin.com/in/kanwaljeetsm/</string>
    <string name="version">1.13.7</string>
    <string name="quote1">"Always wear a mask when outdoors</string>
    <string name="quote2">Sanitize your hands frequently</string>
    <string name="quote3">Cover your mouth and nose when sneezing or coughing</string>
    <string name="regionDetail">Cases in</string>
    <string name="regionToday">Today\'s Change</string>
    <string name="regionTotal">Total</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="restartApp">Please restart your app!</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">VPNJYQHHZJz2NLLlm992lFx8GB5KBEpORaobtJb6</string>
    <string name="back4app_client_key">lmkeQBS1pZlp2uIxOePnBCcjYsvfhLug8vl4mCwp</string>
    <string name="title_activity_state_details">StateDetails</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>