<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StateDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="0"
                android:text="@string/regionDetail"
                android:textColor="@color/blue"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/txtTitle5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/regionToday"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:visibility="visible"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/txtNActive"
                        android:textColor="@color/blue"
                        android:textColorLink="#FFFFFF"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/newActive"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:textColor="@color/green"
                        android:textSize="30sp"
                        android:visibility="visible" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:visibility="visible"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/txtNRecovered"
                        android:textColor="@color/blue"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/newRecovered"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:textColor="@color/blue"
                        android:textSize="30sp"
                        android:visibility="visible" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:visibility="visible"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/txtNDeaths"
                        android:textColor="@color/blue"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/newDeceased"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:visibility="visible" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtTitle6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/regionTotal"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/grid2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                app:columnCount="2"
                app:rowCount="2">

                <androidx.cardview.widget.CardView
                    android:id="@+id/c4"
                    android:layout_width="0dp"
                    android:layout_height="125dp"
                    android:layout_margin="2dp"
                    app:cardElevation="5dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtActiveNum"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="3"
                            android:background="#F8E2E2"
                            android:gravity="center"
                            android:textColor="@android:color/holo_red_dark"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="#F6AEAE"
                            android:gravity="center"
                            android:text="@string/txtActive"
                            android:textColor="@android:color/holo_red_dark"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/c5"
                    android:layout_width="0dp"
                    android:layout_height="125dp"
                    android:layout_margin="2dp"
                    app:cardElevation="5dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtRecoveredNum"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="3"
                            android:background="#DBF6D0"
                            android:gravity="center"
                            android:textColor="@android:color/holo_green_dark"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="#D2ED70"
                            android:gravity="center"
                            android:text="@string/txtRecovered"
                            android:textColor="@android:color/holo_green_dark"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/c6"
                    android:layout_width="0dp"
                    android:layout_height="125dp"
                    android:layout_margin="2dp"
                    app:cardElevation="5dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtDeceasedNum"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="3"
                            android:background="#318C8989"
                            android:gravity="center"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@android:color/darker_gray"
                            android:gravity="center"
                            android:text="@string/txtDeaths"
                            android:textColor="@android:color/primary_text_light"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/c7"
                    android:layout_width="0dp"
                    android:layout_height="125dp"
                    android:layout_margin="2dp"
                    app:cardElevation="5dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtTotalNum"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="3"
                            android:background="#DEEDF8"
                            android:gravity="center"
                            android:textColor="@color/blue"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="#B3D9F8"
                            android:gravity="center"
                            android:text="@string/txtTotalCases"
                            android:textColor="@color/blue"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </androidx.gridlayout.widget.GridLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>